--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,112 @@
+@charset "UTF-8";
+/* roboto-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/roboto-v32-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+* {
+  list-style-type: none;
+  text-decoration: none;
+  margin: 0px;
+  padding: 0px;
+}
 
+body {
+  font-family: "Roboto";
+}
+
+#bandeau {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.65);
+}
+#bandeau #logo {
+  width: 81px;
+}
+#bandeau button {
+  background: none;
+  border: none;
+}
+#bandeau .fa-bars {
+  margin-right: 30px;
+  font-size: 40px;
+  color: #237B62;
+}
+#bandeau #menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Opacité sur l’arrière-plan */
+  z-index: 5; /* Derrière le menu burger mais devant le reste */
+  opacity: 0; /* Initialement invisible */
+  visibility: hidden; /* Empêche les clics quand invisible */
+  transition: opacity 0.7s ease, visibility 0.7s;
+}
+#bandeau #menu-overlay.active {
+  opacity: 1; /* Rend l'overlay visible */
+  visibility: visible; /* Active les clics */
+}
+#bandeau #menuburger {
+  position: fixed;
+  right: 0%;
+  top: 0%;
+  background-color: #FFF;
+  width: 300px;
+  height: 100vh;
+  transform: translateX(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.7s ease, opacity 0.7s ease, visibility 0.7s;
+  z-index: 10; /* Devant l'overlay */
+}
+#bandeau #menuburger ul #xmark1 {
+  height: 100px;
+  font-size: 50px;
+  color: #237B62;
+  display: flex;
+  justify-content: right;
+}
+#bandeau #menuburger ul #xmark1 a {
+  top: 23%;
+  height: 50px;
+}
+#bandeau #menuburger ul li a {
+  height: 100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-bottom: 1px solid #237B62;
+  position: relative;
+  color: #237B62;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#bandeau #menuburger ul li a i {
+  color: #237B62;
+  margin-left: 30px;
+}
+#bandeau #menuburger ul li:nth-child(2) {
+  border-top: 1px solid #237B62;
+}
+#bandeau #menuburger ul li:first-child a,
+#bandeau #menuburger ul li:last-child a {
+  border-bottom: none;
+}
+#bandeau #menuburger.active {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+}
+
+body.activate {
+  background-color: rgba(0, 0, 0, 0.753);
+}
 
 /*# sourceMappingURL=style.css.map */
