--- a/sass/mixin.scss
+++ b/sass/mixin.scss
@@ -27,7 +27,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Opacité sur l’arrière-plan */
+            background-color: rgba(0, 0, 0, 0.70); /* Opacité sur l’arrière-plan */
             z-index: 5; /* Derrière le menu burger mais devant le reste */
             opacity: 0; /* Initialement invisible */
             visibility: hidden; /* Empêche les clics quand invisible */
@@ -65,36 +65,29 @@
                     a{
                         top: 23%;
                         height: 50px;
+                        font-size: 50px;
                     }
                 }
 
                 li{
                     
                     a{
-                        height: 100px;
+                        height: 80px;
                         padding-left: 30px;
                         padding-right: 30px;
-                        border-bottom: 1px solid $colorgreen;
                         position: relative;
                         color: $colorgreen;
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
+                        font-size: 24px;
+                        font-weight: 500;
 
                         i{
                             color: $colorgreen;
                             margin-left: 30px;
                         }
                     }
-                }
-
-                li:nth-child(2){
-                    border-top: 1px solid $colorgreen;
-                }
-
-                li:first-child a,
-                li:last-child a{
-                    border-bottom: none;
                 }
             }
         }
@@ -105,8 +98,15 @@
             visibility: visible;
         }
     }
+}
 
-    body.activate{
-        background-color: rgba(0, 0, 0, 0.753);
-    }
+@mixin bouton1{
+    background-color: $colorgreen;
+    width: 175px;
+    height: 50px;
+    align-items: center;
+    border-radius: 24px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #FFF;
 }
