--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,8 +9,41 @@
     padding: 0px;
 }
 
+.container{
+    width: 370px;
+    margin: 0 auto;
+}
+
 body{
     font-family: $fontPrincipal;
 }
 
 @include navbarMobile;
+
+#trouver{
+
+    h3{
+        font-size: 1.5rem;
+        margin-bottom: 30px;
+    }
+
+    iFrame{
+        border-radius: 24px;
+        width: 100%;
+        height: 300px;
+        margin-bottom: 20px;
+    }
+
+    p{
+        text-align: center;
+    }
+
+    a{
+        margin: 0 auto;
+        margin-top: 50px;
+        display: flex;
+        justify-content: center;
+        @include bouton1
+    }
+}
+
