--- a/sass/mixin.scss
+++ b/sass/mixin.scss
@@ -110,3 +110,25 @@
     font-weight: bold;
     color: #FFF;
 }
+
+@mixin footer{
+
+    ul{
+        border-top: 1px solid rgba(0, 0, 0, 0.65);
+        margin-top: 70px;
+
+        li{
+            margin: 24px;
+
+            a{
+                font-size: 0.8rem;
+                color: rgba(0, 0, 0, 0.65);
+            }
+        }
+
+        li:first-child{
+            margin-top: 30px;
+        }
+    }
+}
+    
