add css/html/js : Slider en cour

--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,13 @@
   padding: 0px;
 }
 
+html, body {
+  overflow-x: hidden; /* <---------- SUPER IMPORTANT  */
+}
+
 .container {
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -105,6 +110,22 @@ body {
   visibility: visible;
 }
 
+.nivoSlider {
+  height: 555px;
+}
+.nivoSlider .nivo-caption {
+  height: 300px;
+  background-color: #237B62;
+  opacity: 1;
+  text-align: center;
+}
+.nivoSlider .nivo-caption h2 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.nivoSlider .nivo-caption p {
+  margin-bottom: 10px;
+}
 #trouver h3 {
   font-size: 1.5rem;
   margin-bottom: 30px;
@@ -113,7 +134,7 @@ body {
   border-radius: 24px;
   width: 100%;
   height: 300px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 #trouver p {
   text-align: center;
@@ -133,19 +154,22 @@ body {
   color: #FFF;
 }
 
-ul {
+footer ul {
   border-top: 1px solid rgba(0, 0, 0, 0.65);
   margin-top: 70px;
 }
-ul li {
+footer ul li {
   margin: 24px;
 }
-ul li a {
+footer ul li a {
   font-size: 0.8rem;
   color: rgba(0, 0, 0, 0.65);
 }
-ul li:first-child {
+footer ul li:first-child {
   margin-top: 30px;
+}
+footer ul li:last-child {
+  margin-bottom: 70px;
 }
 
 /*# sourceMappingURL=style.css.map */
