--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,8 +9,13 @@
     padding: 0px;
 }
 
+html, body{
+    overflow-x: hidden;   /* <---------- SUPER IMPORTANT  */
+}
+
 .container{
-    width: 370px;
+    max-width: 370px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -19,6 +24,30 @@ body{
 }
 
 @include navbarMobile;
+
+.nivoSlider{
+    height: 555px;
+
+    .nivo-caption{
+        height: 300px;
+        background-color: $colorgreen;
+        opacity: 1;
+        text-align: center;
+
+        h2{
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
+
+        p{
+            margin-bottom: 10px;
+        }
+
+        a{
+            @include boutonSlider
+        }
+    }
+}
 
 #trouver{
 
@@ -31,7 +60,7 @@ body{
         border-radius: 24px;
         width: 100%;
         height: 300px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     p{
