--- a/css/style.css
+++ b/css/style.css
@@ -111,21 +111,48 @@ body {
 }
 
 .nivoSlider {
-  height: 555px;
+  height: 635px;
+  border-radius: 24px;
 }
 .nivoSlider .nivo-caption {
-  height: 300px;
+  height: 228px;
   background-color: #237B62;
   opacity: 1;
   text-align: center;
 }
 .nivoSlider .nivo-caption h2 {
+  font-size: 1.7rem;
+  font-weight: bold;
   margin-top: 10px;
   margin-bottom: 20px;
 }
 .nivoSlider .nivo-caption p {
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
+.nivoSlider .nivo-caption a {
+  background-color: #FFF;
+  border-radius: 30px;
+  padding: 14px 48px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #237B62;
+}
+
+.theme-default .nivo-controlNav a {
+  background-color: #D9D9D9;
+  border-radius: 50px;
+  width: 16px;
+  height: 16px;
+  margin: 4px;
+}
+
+.nivo-controlNav a.active {
+  background-color: #237B62;
+  border-radius: 50px;
+  width: 16px;
+  height: 16px;
+}
+
 #trouver h3 {
   font-size: 1.5rem;
   margin-bottom: 30px;
