--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import "mixin";
+@import "media";
 @import "colors";
 @import "fonts";
 
@@ -13,22 +14,20 @@ html, body{
     overflow-x: hidden;   /* <---------- SUPER IMPORTANT  */
 }
 
-.container{
-    max-width: 370px;
-    width: 100%;
-    margin: 0 auto;
-}
-
 body{
     font-family: $fontPrincipal;
 }
 
+@include mediaScreen;
+
 @include navbarMobile;
 
-.nivoSlider{
-    height: 635px;
-    border-radius: 24px;
+.slider-wrapper{
+    margin-top: 40px;
 
+    .nivoSlider{
+        border-radius: 24px;
+    }
     .nivo-caption{
         height: 228px;
         background-color: $colorgreen;
@@ -69,6 +68,11 @@ body{
         width: 16px;
         height: 16px;
     }
+}
+
+.theme-default .nivo-directionNav a{
+    background: url(../themes/default/chevron-left-solid.svg) no-repeat;
+    color: #FFF;
 }
 
 #trouver{
