--- a/sass/media.scss
+++ b/sass/media.scss
@@ -13,6 +13,17 @@
                 height: 500px;
             }
         }
+
+        #pagevisite{
+            
+            .visite{
+        
+                h2{
+                    font-size: 0.9rem;
+                }
+            }
+        }
+        
     }
     
     @media screen and (min-width: 375px){ 
