--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,16 +11,18 @@
 }
 
 html, body{
-    overflow-x: hidden;   /* <---------- SUPER IMPORTANT  */
+    overflow-x: hidden;
 }
 
 body{
     font-family: $fontPrincipal;
 }
 
-@include mediaScreen;
-
 @include navbarMobile;
+
+
+// ------------------------------- Slider -------------------------------
+
 
 .slider-wrapper{
     margin-top: 40px;
@@ -79,6 +81,10 @@ body{
     color: #FFF;
 }
 
+
+// ------------------------------- Contact -------------------------------
+
+
 #trouver{
 
     h3{
@@ -109,27 +115,80 @@ body{
 @include footer;
 
 
-// --------------------------------- visiter.html -------------------
+// ------------------------------- visiter.html -------------------------------
 
+#pagevisite{
+    margin-top: 100px;
+    margin-bottom: 260px;
 
-.visite{
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    background-color: $colorgreen;
-    border-radius: 24px;
-
-    img{
-        width: 110px;
-        border-radius: 24px 0 0 24px;
-    }
-
-    h2{
-        color: #FFF;
-        font-size: 1rem;
+    .visite{
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        background-color: $colorgreen;
+        border-radius: 24px;
+    
+        img{
+            width: 110px;
+            border-radius: 24px 0 0 24px;
+        }
+    
+        h2{
+            color: #FFF;
+            font-size: 1rem;
+            margin: 0 auto;
+        }
     }
 }
 
-.visite:first-child{
-    margin-top: 60px;
+
+// ------------------------------- visiterParticulier.html -------------------------------
+
+#visiteparticulier{
+
+    #contenu{
+        h1{
+            margin-top: 30px;
+            font-size: 1.2rem;
+        }
+    
+        p{
+            margin: 60px 0;
+        }
+    
+        img{
+            width: 100%;
+            border-radius: 24px
+        }
+    }
+
+    .pedago{
+        width: 100%;
+        background-color: $colorgreen;
+        border-radius: 24px;
+        margin-top: 40px;
+
+        h3,
+        p{
+            color: #FFF;
+            text-align: center;
+            margin: 0 20px;
+            padding: 20px 0;
+        }
+
+        h3{
+            font-weight: bold;
+        }
+
+        p{
+            font-size: 0.9rem;
+            font-weight: lighter;
+        }
+    }
 }
+
+
+
+// ------------------------------- Media -------------------------------
+
+@include mediaScreen;
