--- a/css/style.css
+++ b/css/style.css
@@ -15,43 +15,13 @@
 }
 
 html, body {
-  overflow-x: hidden; /* <---------- SUPER IMPORTANT  */
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Roboto";
 }
 
-@media screen and (max-width: 374px) {
-  .container {
-    max-width: 280px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  .slider-wrapper .nivoSlider {
-    height: 500px;
-  }
-}
-@media screen and (min-width: 375px) {
-  .container {
-    max-width: 320px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  .slider-wrapper .nivoSlider {
-    height: 550px;
-  }
-}
-@media screen and (min-width: 425px) {
-  .container {
-    max-width: 370px;
-    width: 100%;
-    margin: 0 auto;
-  }
-  .slider-wrapper .nivoSlider {
-    height: 600px;
-  }
-}
 #bandeau {
   height: 100px;
   display: flex;
@@ -234,24 +204,91 @@ footer ul li:last-child {
   margin-bottom: 70px;
 }
 
-.visite {
-  margin-top: 40px;
+#pagevisite {
+  margin-top: 100px;
+  margin-bottom: 260px;
+}
+#pagevisite .visite {
+  margin-top: 50px;
   display: flex;
   align-items: center;
   background-color: #237B62;
   border-radius: 24px;
 }
-.visite img {
+#pagevisite .visite img {
   width: 110px;
   border-radius: 24px 0 0 24px;
 }
-.visite h2 {
+#pagevisite .visite h2 {
   color: #FFF;
   font-size: 1rem;
+  margin: 0 auto;
 }
 
-.visite:first-child {
-  margin-top: 60px;
+#visiteparticulier #contenu h1 {
+  margin-top: 30px;
+  font-size: 1.2rem;
+}
+#visiteparticulier #contenu p {
+  margin: 60px 0;
+}
+#visiteparticulier #contenu img {
+  width: 100%;
+  border-radius: 24px;
+}
+#visiteparticulier .pedago {
+  width: 100%;
+  background-color: #237B62;
+  border-radius: 24px;
+  margin-top: 40px;
+}
+#visiteparticulier .pedago h3,
+#visiteparticulier .pedago p {
+  color: #FFF;
+  text-align: center;
+  margin: 0 20px;
+  padding: 20px 0;
+}
+#visiteparticulier .pedago h3 {
+  font-weight: bold;
+}
+#visiteparticulier .pedago p {
+  font-size: 0.9rem;
+  font-weight: lighter;
+}
+
+@media screen and (max-width: 374px) {
+  .container {
+    max-width: 280px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slider-wrapper .nivoSlider {
+    height: 500px;
+  }
+  #pagevisite .visite h2 {
+    font-size: 0.9rem;
+  }
+}
+@media screen and (min-width: 375px) {
+  .container {
+    max-width: 320px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slider-wrapper .nivoSlider {
+    height: 550px;
+  }
+}
+@media screen and (min-width: 425px) {
+  .container {
+    max-width: 370px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slider-wrapper .nivoSlider {
+    height: 600px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
