--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ body {
   font-size: 1.2rem;
   font-weight: bold;
   color: #FFF;
+  border: none;
 }
 
 footer ul {
@@ -225,6 +226,9 @@ footer ul li:last-child {
   margin: 0 auto;
 }
 
+#visiteparticulier {
+  margin-bottom: 200px;
+}
 #visiteparticulier #contenu h1 {
   margin-top: 30px;
   font-size: 1.2rem;
@@ -255,6 +259,61 @@ footer ul li:last-child {
 #visiteparticulier .pedago p {
   font-size: 0.9rem;
   font-weight: lighter;
+}
+
+#formulaire {
+  margin-bottom: 200px;
+}
+#formulaire h1 {
+  margin-top: 30px;
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+#formulaire form p {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+}
+#formulaire form p select,
+#formulaire form p input {
+  margin-top: 10px;
+  border: 1px solid #237B62;
+  border-radius: 20px;
+  height: 66px;
+}
+#formulaire form p select {
+  text-align: center;
+  font-size: 1rem;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+}
+#formulaire form p textarea:focus,
+#formulaire form p input:focus,
+#formulaire form p select:focus {
+  outline: none;
+  border-color: #C45D08;
+}
+#formulaire form p textarea {
+  border: 1px solid #237B62;
+  border-radius: 24px;
+  margin-top: 10px;
+}
+#formulaire button {
+  margin-top: 30px;
+  background-color: #237B62;
+  width: 175px;
+  height: 50px;
+  align-items: center;
+  border-radius: 24px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #FFF;
+  border: none;
+}
+#formulaire button:hover {
+  background-color: #C45D08;
 }
 
 @media screen and (max-width: 374px) {
