--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,9 @@ body {
   color: #FFF;
   border: none;
 }
+#trouver a:hover {
+  background-color: #C45D08;
+}
 
 footer ul {
   border-top: 1px solid rgba(0, 0, 0, 0.65);
@@ -314,6 +317,32 @@ footer ul li:last-child {
 }
 #formulaire button:hover {
   background-color: #C45D08;
+}
+
+#reserver {
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  background-color: #237B62;
+  width: 175px;
+  height: 50px;
+  align-items: center;
+  border-radius: 24px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #FFF;
+  border: none;
+}
+
+#reserver:hover {
+  background-color: #C45D08;
+}
+
+#heberg .loc {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 33% 33% 33%;
 }
 
 @media screen and (max-width: 374px) {
