--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,7 @@ footer ul li:last-child {
 #formulaire form p select,
 #formulaire form p input {
   margin-top: 10px;
+  padding: 0 15px;
   border: 1px solid #237B62;
   border-radius: 20px;
   height: 66px;
@@ -300,6 +301,7 @@ footer ul li:last-child {
 }
 #formulaire form p textarea {
   border: 1px solid #237B62;
+  padding: 15px;
   border-radius: 24px;
   margin-top: 10px;
 }
@@ -340,9 +342,67 @@ footer ul li:last-child {
 }
 
 #heberg .loc {
+  margin-top: 50px;
   display: grid;
+  background-color: #D5FBF0;
+  border-radius: 20px;
+  justify-content: center;
   width: 100%;
-  grid-template-columns: 33% 33% 33%;
+  grid-template: repeat(2, 120px) 80px 20px repeat(2, 100px) repeat(2, 80px)/repeat(3, 123px);
+}
+#heberg .loc .img {
+  width: 100%;
+  grid-area: 1/1/3/4;
+  border-radius: 20px 20px 0 0;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+#heberg .loc h3 {
+  grid-area: 3/1/4/4;
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+#heberg .loc p {
+  grid-area: 5/1/7/4;
+  margin-left: 15px;
+}
+#heberg .loc .icone {
+  grid-area: 7/1/9/4;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 370px;
+  width: 100%;
+}
+#heberg .loc .icone .spe {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#heberg .loc .icone .spe i {
+  margin: 0 20px;
+}
+#heberg .loc .icone .spe:nth-child(3) {
+  width: 100%;
+}
+#heberg .loc #vache {
+  background: url(../images/chambre_double_vache_1_3-2.jpg);
+}
+#heberg .loc #conf {
+  background: url(../images/gite_confort_3-2.jpg);
+}
+#heberg .loc #chevre {
+  background: url(../images/chambre_chevre_double_3-2.jpg);
+}
+#heberg .loc #cochon {
+  background: url(../images/gite_3-2.png);
+}
+#heberg .loc #gite12 {
+  background: url(../images/gite_ou_studio_familiale_3-2.jpg);
+}
+#heberg .loc #coq {
+  background: url(../images/chambre_coq_double_3-2.jpg);
 }
 
 @media screen and (max-width: 374px) {
